--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -31,7 +31,7 @@ jobs:
           VALIDATE_ALL_CODEBASE: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }} # Validates all source when push on master, else just the git diff with master. Override with true if you always want to lint all sources
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           FILTER_REGEX_EXCLUDE: '(\.automation\/test\/)'
-          DISABLE_LINTERS: CLOUDFORMATION,PYTHON_BLACK,DOCKERFILE_HADOLINT
+          DISABLE_LINTERS: BASH_SHFMT,CLOUDFORMATION,DOCKERFILE_HADOLINT,PYTHON_BLACK
 
       # Upload Mega-Linter artifacts
       - name: Archive production artifacts
