RUST linter with Clippy (#3)
* RUST linter with Clippy

* Update dockerfilelint config

* Fix dockerfilelint call

* Fix rust installation

* Fix rust install

* Add cargo in PATH

* Fix rust install

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,11 @@ __pycache__/
 coverage.xml
 
 .coverage*
+
+.automation/test/rust/bad/target/
+
+.automation/test/rust/bad/Cargo.lock
+
+.automation/test/rust/good/target/
+
+.automation/test/rust/good/Cargo.lock
