Add link to doc in GithubComment reporter (#4)
* Add link to doc in GithubComment reporter

* Generate MD doc for descriptors

* #readme

* Add link to Artifacts on error cells

* markdownlint disable for doc mds

--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -1,6 +1,6 @@
 ---
 # Mega-Linter GitHub Action configuration file
-# More info at https://github.com/nvuillam/mega-linter#mega-linter
+# More info at https://github.com/nvuillam/mega-linter#readme
 name: Mega-Linter
 
 # Start lint on any push and on pull requests
