Add copy-paste detector with jscpd (#6)
* Add copy-paste detector with jscpd

* Do not display empty table in GitHub PR Comment reporter

* Apply jscpd config to own repo

* Fix tekton-lint

* Decrease tekton-lint version

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,9 @@ coverage.xml
 .automation/test/rust/good/target/
 
 .automation/test/rust/good/Cargo.lock
+
+.automation/test/copypaste/bad/report/
+
+.automation/test/copypaste/good/report/
+
+report/
