--- a/megalinter/descriptors/tekton.yml
+++ b/megalinter/descriptors/tekton.yml
@@ -9,8 +9,11 @@ linters:
   # TEKTON-LINT
   - linter_name: tekton-lint
     linter_url: https://github.com/IBM/tekton-lint
+    linter_rules_configuration_url: https://github.com/IBM/tekton-lint#configuring-tekton-lint
+    config_file_name: .tektonlintrc.yaml
+    cli_config_arg_name: ''
     examples:
       - "tekton-lint myfile.yml"
     install:
       npm:
-        - tekton-lint
+        - 'tekton-lint@0.4.2'
