Extract linter version and help, integrate in doc (#8)
- Generate linters-help.json and linters-versions.json during CI test cases
- Integrate help and version in linters documentation

--- a/.github/workflows/deploy-DEV.yml
+++ b/.github/workflows/deploy-DEV.yml
@@ -97,3 +97,5 @@ jobs:
           path: |
             report
             mega-linter.log
+            linter-helps.json
+            linter-versions.json
