--- a/megalinter/descriptors/protobuf.yml
+++ b/megalinter/descriptors/protobuf.yml
@@ -12,6 +12,7 @@ linters:
       - "lint"
     cli_config_arg_name: "--config_path"
     cli_version_arg_name: 'version'
+    help_command_return_code: 2
     examples:
       - "protolint lint myfile.proto"
       - "protolint lint --config_path .protolintrc.yml myfile.proto"
