--- a/megalinter/descriptors/c.yml
+++ b/megalinter/descriptors/c.yml
@@ -8,6 +8,7 @@ linters:
   - linter_name: cpplint
     name: C_CPPLINT
     linter_url: https://github.com/cpplint/cpplint
+    cli_help_arg_name: "--help"
     examples:
       - "cpplint myfile.cpp"
     install:
