--- a/megalinter/descriptors/perl.yml
+++ b/megalinter/descriptors/perl.yml
@@ -15,6 +15,8 @@ linters:
     linter_banner_image_url: https://chrisdolan.net/madmongers/images/perl-critic-logo.gif
     linter_rules_configuration_url: https://metacpan.org/pod/Perl::Critic#CONFIGURATION
     linter_rules_inline_disable_url: https://metacpan.org/pod/Perl::Critic#BENDING-THE-RULES
+    cli_help_arg_name: "--help"
+    help_command_return_code: 2
     examples:
       - "perlcritic myfile.pl"
     install:
