Allow user to configure additional CLI arguments for a linter (#11)
* Update README

* Allow to add user arguments using <LINTER>_ARGUMENTS variable

* Update doc

* Fix golang

* Update help & version

* Workaround golangci-lint version issue

--- a/megalinter/descriptors/go.yml
+++ b/megalinter/descriptors/go.yml
@@ -21,6 +21,8 @@ linters:
     config_file_name: .golangci.yml
     cli_lint_extra_args:
       - "run"
+    cli_version_arg_name: 'version'
+    version_extract_regex: "((\\d+(\\.\\d+)+)|(master))"
     examples:
       - "golangci-lint run myfile.go"
       - "golangci-lint run -c .golangci.yml myfile.go"
