--- a/megalinter/descriptors/groovy.yml
+++ b/megalinter/descriptors/groovy.yml
@@ -16,6 +16,9 @@ linters:
     linter_rules_configuration_url: https://github.com/nvuillam/npm-groovy-lint#configuration
     linter_rules_inline_disable_url: https://github.com/nvuillam/npm-groovy-lint#disabling-rules-in-source
     config_file_name: .groovylintrc.json
+    cli_lint_extra_args:
+      - '--failon'
+      - 'warning'
     version_extract_regex: "(?<=npm-groovy-lint version )\\d+(\\.\\d+)+"
     examples:
       - "npm-groovy-lint --failon warning --path . --files myfile.groovy"
