Quick fixes about APPLY_FIXES (#30)
- Debugs
- Update Mega-Linter.yml template
- add doc for eslint

--- a/TEMPLATES/mega-linter.yml
+++ b/TEMPLATES/mega-linter.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
         with:
+          token: ${{ secrets.PAT || env.GITHUB_TOKEN }}
           fetch-depth: 0
 
       # Mega-Linter
@@ -37,7 +38,7 @@ jobs:
           # DISABLE: COPYPASTE,SPELL # Uncomment to disable copy-paste and spell checks
           # ADD YOUR CUSTOM ENV VARIABLES HERE
 
-      # Upload Mega-Linter artifacts. They will be available on Github action page "Artifacts" section
+      # Upload Mega-Linter artifacts
       - name: Archive production artifacts
         if: ${{ success() }} || ${{ failure() }}
         uses: actions/upload-artifact@v2
@@ -50,6 +51,7 @@ jobs:
       # This step will evaluate the repo status and report the change
       - name: Check if there are changes
         id: changes
+        if: ${{ success() }} || ${{ failure() }}
         uses: UnicornGlobal/has-changes-action@v1.0.11
 
       # Create pull request if applicable
@@ -57,7 +59,7 @@ jobs:
         if: steps.changes.outputs.changed == 1 && (env.APPLY_FIXES_EVENT == 'all' || env.APPLY_FIXES_EVENT == github.event_name) && env.APPLY_FIXES_MODE == 'pull_request'
         uses: peter-evans/create-pull-request@v3
         with:
-          token: ${{ secrets.PAT }}
+          token: ${{ secrets.PAT || env.GITHUB_TOKEN }}
           commit-message: "[Mega-Linter] Apply linters automatic fixes"
           title: "[Mega-Linter] Apply linters automatic fixes"
           labels: bot
@@ -68,9 +70,12 @@ jobs:
           echo "Pull Request URL - ${{ steps.cpr.outputs.pull-request-url }}"
 
       # Push new commit if applicable
+      - name: Prepare commit
+        if: steps.changes.outputs.changed == 1 && (env.APPLY_FIXES_EVENT == 'all' || env.APPLY_FIXES_EVENT == github.event_name) && env.APPLY_FIXES_MODE == 'commit' && github.ref != 'refs/heads/master'
+        run: sudo chown -Rc $UID .git/
       - name: Commit and push applied linter fixes
         if: steps.changes.outputs.changed == 1 && (env.APPLY_FIXES_EVENT == 'all' || env.APPLY_FIXES_EVENT == github.event_name) && env.APPLY_FIXES_MODE == 'commit' && github.ref != 'refs/heads/master'
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
+          branch: ${{ github.event.pull_request.head.ref || github.head_ref || github.ref }}
           commit_message: "[Mega-Linter] Apply linters fixes"
-          token: ${{ secrets.PAT }}
