--- a/megalinter/descriptors/markdown.yml
+++ b/megalinter/descriptors/markdown.yml
@@ -9,13 +9,12 @@ linters:
     linter_image_url: https://davidanson.gallerycdn.vsassets.io/extensions/davidanson/vscode-markdownlint/0.37.1/1601748708034/Microsoft.VisualStudio.Services.Icons.Default
     linter_rules_configuration_url: https://github.com/DavidAnson/markdownlint#optionsconfig
     linter_rules_inline_disable_url: https://github.com/DavidAnson/markdownlint#configuration
-    config_file_name: .markdown-lint.yml
+    config_file_name: .markdown-lint.json
     cli_lint_fix_arg_name: '--fix'
-    no_config_if_fix: true
     examples:
       - "markdownlint myfile.css"
-      - "markdownlint -c .markdown-lint.yml myfile.md"
-      - "markdownlint --fix -c .markdown-lint.yml myfile.md"
+      - "markdownlint -c .markdown-lint.json myfile.md"
+      - "markdownlint --fix -c .markdown-lint.json myfile.md"
     install:
       npm:
         - markdownlint-cli
