--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
         with:
+          token: ${{ secrets.PAT || env.GITHUB_TOKEN }}
           # Full git history is needed to get a proper list of changed files within `mega-linter`
           fetch-depth: 0
 
@@ -53,6 +54,7 @@ jobs:
       # This step will evaluate the repo status and report the change
       - name: Check if there are changes
         id: changes
+        if: ${{ success() }} || ${{ failure() }}
         uses: UnicornGlobal/has-changes-action@v1.0.11
 
       # Create pull request if applicable
@@ -60,7 +62,7 @@ jobs:
         if: steps.changes.outputs.changed == 1 && (env.APPLY_FIXES_EVENT == 'all' || env.APPLY_FIXES_EVENT == github.event_name) && env.APPLY_FIXES_MODE == 'pull_request'
         uses: peter-evans/create-pull-request@v3
         with:
-          token: ${{ secrets.PAT }}
+          token: ${{ secrets.PAT || env.GITHUB_TOKEN }}
           commit-message: "[Mega-Linter] Apply linters automatic fixes"
           title: "[Mega-Linter] Apply linters automatic fixes"
           labels: bot
@@ -71,9 +73,13 @@ jobs:
           echo "Pull Request URL - ${{ steps.cpr.outputs.pull-request-url }}"
 
       # Push new commit if applicable
+      - name: Prepare commit
+        if: steps.changes.outputs.changed == 1 && (env.APPLY_FIXES_EVENT == 'all' || env.APPLY_FIXES_EVENT == github.event_name) && env.APPLY_FIXES_MODE == 'commit' && github.ref != 'refs/heads/master'
+        run: sudo chown -Rc $UID .git/
       - name: Commit and push applied linter fixes
         if: steps.changes.outputs.changed == 1 && (env.APPLY_FIXES_EVENT == 'all' || env.APPLY_FIXES_EVENT == github.event_name) && env.APPLY_FIXES_MODE == 'commit' && github.ref != 'refs/heads/master'
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
+          branch: ${{ github.event.pull_request.head.ref || github.head_ref || github.ref }}
           commit_message: "[Mega-Linter] Apply linters fixes"
-          token: ${{ secrets.PAT }}
+
