--- a/megalinter/descriptors/javascript.yml
+++ b/megalinter/descriptors/javascript.yml
@@ -10,26 +10,34 @@ linters:
   # ESLINT
   - linter_name: eslint
     name: JAVASCRIPT_ES
+    linter_text: |
+      eslint requires a custom configuration file applicable to your project.
+      You can create it by typing `npx eslint --init` in the root of your repository
     linter_url: https://eslint.org
     linter_banner_image_url: https://miro.medium.com/max/875/1*jFyfsakE2WBv5sFjBQUsuw.png
     linter_rules_configuration_url: https://eslint.org/docs/user-guide/configuring
     linter_rules_inline_disable_url: https://eslint.org/docs/user-guide/configuring#disabling-rules-with-inline-comments
-    config_file_name: .eslintrc.yml
+    config_file_name: .eslintrc.json
     cli_config_extra_args:
       - "--no-eslintrc"
+    cli_lint_extra_args:
       - "--no-ignore"
     cli_lint_fix_arg_name: '--fix'
     examples:
       - "eslint myfile.js"
-      - "eslint -c .eslintrc.yml --no-eslintrc --no-ignore myfile.js"
-      - "eslint -c .eslintrc.yml --no-eslintrc --no-ignore --fix myfile.js"
+      - "eslint -c .eslintrc.json --no-eslintrc --no-ignore myfile.js"
+      - "eslint --fix -c .eslintrc.json --no-eslintrc --no-ignore myfile.js"
     install:
       npm:
         - eslint
         - eslint-config-airbnb
         - eslint-config-prettier
+        - eslint-config-standard
+        - eslint-plugin-import
         - eslint-plugin-jest
+        - eslint-plugin-node
         - eslint-plugin-prettier
+        - eslint-plugin-promise
         - babel-eslint
   # STANDARD
   - linter_name: standard
