--- a/megalinter/descriptors/tsx.yml
+++ b/megalinter/descriptors/tsx.yml
@@ -5,19 +5,23 @@ file_extensions:
 linters:
   # ESLINT
   - linter_name: eslint
+    linter_text: |
+      eslint requires a custom configuration file applicable to your project.
+      You can create it by typing `npx eslint --init` in the root of your repository
     linter_url: https://eslint.org
     linter_banner_image_url: https://miro.medium.com/max/875/1*jFyfsakE2WBv5sFjBQUsuw.png
     linter_rules_configuration_url: https://eslint.org/docs/user-guide/configuring
     linter_rules_inline_disable_url: https://eslint.org/docs/user-guide/configuring#disabling-rules-with-inline-comments
-    config_file_name: .eslintrc.yml
+    config_file_name: .eslintrc.json
     cli_config_extra_args:
       - "--no-eslintrc"
+    cli_lint_extra_args:
       - "--no-ignore"
     cli_lint_fix_arg_name: '--fix'
     examples:
       - "eslint myfile.tsx"
-      - "eslint -c .eslintrc.yml  --no-eslintrc --no-ignore myfile.tsx"
-      - "eslint --fix -c .eslintrc.yml  --no-eslintrc --no-ignore myfile.tsx"
+      - "eslint -c .eslintrc.json --no-eslintrc --no-ignore myfile.tsx"
+      - "eslint --fix -c .eslintrc.json --no-eslintrc --no-ignore myfile.tsx"
     install:
       npm:
         - typescript
