--- a/.github/workflows/deploy-RELEASE.yml
+++ b/.github/workflows/deploy-RELEASE.yml
@@ -38,6 +38,8 @@ jobs:
       ##########################
       - name: Checkout Code
         uses: actions/checkout@v2.3.3
+        with:
+          fetch-depth: 0
 
       ###################################
       # Run Deploy script for Dockerhub #
