Add isort python formatter + refresh fork (#40)
* Merge conflicts from source

* Add isort Python formatter/linter

* changelog

* Fix wrongly merged conflict

* Update doc

* Remove terraform TAP tests

* Update python test

* [automation] Auto-update linters version, help and documentation

* CI

* Quickfix PR Comment emoji

* CHANGELOG

* Lint fixes

--- a/megalinter/descriptors/python.yml
+++ b/megalinter/descriptors/python.yml
@@ -18,8 +18,9 @@ linters:
     install:
       pip:
         - pylint
+
   # BLACK
-  - class: PythonBlackLinter
+  - class: PythonBlackOrIsortLinter
     linter_name: black
     name: PYTHON_BLACK
     linter_url: https://github.com/psf/black
@@ -30,7 +31,7 @@ linters:
     cli_lint_extra_args:
       - "--diff"
       - "--check"
-    cli_lint_fix_arg_name: '--megalinter-fix-flag' # Workaround for PythonBlackLinter class behavior
+    cli_lint_fix_arg_name: '--megalinter-fix-flag' # Workaround for PythonBlackOrIsortLinter class behavior
     examples:
       - "black --diff --check myfile.py"
       - "black --config .python-black --diff --check myfile.py"
@@ -53,3 +54,28 @@ linters:
     install:
       pip:
         - flake8
+
+  # ISORT
+  - class: PythonBlackOrIsortLinter
+    linter_name: isort
+    name: PYTHON_ISORT
+    linter_url: https://pycqa.github.io/isort/
+    linter_banner_image_url: https://raw.githubusercontent.com/pycqa/isort/develop/art/logo_large.png
+    linter_rules_configuration_url: https://pycqa.github.io/isort/docs/configuration/config_files/
+    linter_rules_inline_disable_url: https://pycqa.github.io/isort/docs/configuration/action_comments/
+    config_file_name: .isort.cfg
+    cli_config_arg_name: "--settings-file"
+    cli_lint_extra_args:
+      - "--diff"
+      - "--check"
+      - "--profile"
+      - "black"
+    cli_lint_fix_arg_name: '--megalinter-fix-flag' # Workaround for PythonBlackOrIsortLinter class behavior
+    examples:
+      - "isort --diff --check --profile black myfile.py"
+      - "isort --diff --check --profile black --settings-file .isort.cfg myfile.py"
+      - "isort --profile black --settings-file .isort.cfg myfile.py"
+    install:
+      pip:
+        - isort
+        - black
