--- a/megalinter/descriptors/csharp.yml
+++ b/megalinter/descriptors/csharp.yml
@@ -16,7 +16,7 @@ install:
     - ENV PATH="${PATH}:/root/.dotnet/tools:/usr/share/dotnet"
 linters:
   # DOTNET FORMAT
-  - class: CSharpDotnetFormatLinter
+  - class: DotnetFormatLinter
     linter_name: dotnet-format
     linter_url: https://github.com/dotnet/format
     linter_image_url: https://user-images.githubusercontent.com/9797472/61659851-6bbdc880-ac7d-11e9-95f7-d30c7de1a18a.png
@@ -26,8 +26,12 @@ linters:
       - "--exclude"
       - "/"
       - "--include"
+    cli_lint_fix_arg_name: '--megalinter-fix-flag' # Workaround for PythonBlackOrIsortLinter class behavior
+    cli_lint_fix_remove_args:
+      - "--check"
     examples:
       - "dotnet-format --folder --check --exclude / --include myfile.cs"
+      - "dotnet-format --folder --exclude / --include myfile.cs"
     install:
       dockerfile:
         - RUN /usr/share/dotnet/dotnet tool install -g dotnet-format
