Perl: lint files with no extension containing Perl shebang (#49)
* Perl: more files linted

* Avoid crash when not text file

* [Mega-Linter] Apply linters fixes

* Provide CSpell .cspell.json suggestion in log

* [Mega-Linter] Apply linters fixes

* Generate example .cspell.json only if necessary

* [Mega-Linter] Apply linters fixes

Co-authored-by: nvuillam <nvuillam@users.noreply.github.com>

--- a/megalinter/descriptors/bash.yml
+++ b/megalinter/descriptors/bash.yml
@@ -27,8 +27,9 @@ linters:
         default_value: "false"
   # Shellcheck
   - linter_name: shellcheck
-    linter_url: https://github.com/koalaman/shellcheck
     name: BASH_SHELLCHECK
+    linter_url: https://github.com/koalaman/shellcheck
+    linter_rules_inline_disable_url: https://github.com/koalaman/shellcheck/wiki/Ignore
     cli_lint_extra_args:
       - "--color=auto"
       - "--external-sources"
