--- a/megalinter/descriptors/perl.yml
+++ b/megalinter/descriptors/perl.yml
@@ -4,6 +4,10 @@ file_extensions:
   - ".pl"
   - ".pm"
   - ".t"
+  - ""
+file_contains:
+  - "#!/usr/bin/env perl"
+  - "#!/usr/bin/perl"
 install:
   apk:
     - perl
