--- a/megalinter/descriptors/spell.yml
+++ b/megalinter/descriptors/spell.yml
@@ -3,7 +3,8 @@ descriptor_type: other
 lint_all_other_linters_files: true
 linters:
   # CSPELL
-  - linter_name: cspell
+  - class: CSpellLinter
+    linter_name: cspell
     name: SPELL_CSPELL
     linter_url: https://github.com/streetsidesoftware/cspell/tree/master/packages/cspell
     linter_image_url: https://streetsidesoftware.gallerycdn.vsassets.io/extensions/streetsidesoftware/code-spell-checker/1.9.2/1601218033318/Microsoft.VisualStudio.Services.Icons.Default
