Update doc site description during build (#60)
* #site_description-start in mkdocs.yml

* Fix Mega-Linter

* [Mega-Linter] Apply linters fixes

* Fix nav

* Tables with full width

* Update mega-linter.yml template

* Fix CSS

* do not lint css with scss-lint

Co-authored-by: nvuillam <nvuillam@users.noreply.github.com>

--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -59,6 +59,7 @@ jobs:
 
       # Create pull request if applicable
       - name: Create Pull Request with applied fixes
+        id: cpr
         if: steps.changes.outputs.changed == 1 && (env.APPLY_FIXES_EVENT == 'all' || env.APPLY_FIXES_EVENT == github.event_name) && env.APPLY_FIXES_MODE == 'pull_request'
         uses: peter-evans/create-pull-request@v3
         with:
