--- a/megalinter/descriptors/spell.yml
+++ b/megalinter/descriptors/spell.yml
@@ -6,6 +6,9 @@ linters:
   - class: CSpellLinter
     linter_name: cspell
     name: SPELL_CSPELL
+    linter_text: |
+      Mega-Linter generates content of a cspell.json at the end of the error log artifact
+      Copy it at the root of your repository, read it, remove real spelling errors (after have corrected them in the source), and you're good to go !
     linter_url: https://github.com/streetsidesoftware/cspell/tree/master/packages/cspell
     linter_image_url: https://streetsidesoftware.gallerycdn.vsassets.io/extensions/streetsidesoftware/code-spell-checker/1.9.2/1601218033318/Microsoft.VisualStudio.Services.Icons.Default
     linter_rules_configuration_url: https://github.com/streetsidesoftware/cspell/tree/master/packages/cspell#customization
