--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -208,4 +208,10 @@ nav:
           - "index": "descriptors/spell.md"
           - "cspell": "descriptors/spell_cspell.md"
 # other-end
+    - "Reporters":
+        - "Text files": "reporters/TextReporter.md"
+        - "Pull Request comments": "reporters/GitHubCommentReporter.md"
+        - "GitHub Status": "reporters/GitHubStatusReporter.md"
+        - "TAP files": "reporters/TapReporter.md"
+        - "Console": "reporters/ConsoleReporter.md"
     - "Mega-Linter vs Super-Linter": "./#mega-linter-vs-super-linter"
