Reactivate Groovy fix (#65)

--- a/megalinter/descriptors/groovy.yml
+++ b/megalinter/descriptors/groovy.yml
@@ -18,12 +18,13 @@ linters:
     config_file_name: .groovylintrc.json
     cli_lint_extra_args:
       - '--failon'
-      - 'warning'
-    # cli_lint_fix_arg_name: '--fix' # Disabled while it does not work
+      - 'info'
+    cli_lint_fix_arg_name: '--fix'
     version_extract_regex: "(?<=npm-groovy-lint version )\\d+(\\.\\d+)+"
     examples:
-      - "npm-groovy-lint --failon warning --path . --files myfile.groovy"
-      - "npm-groovy-lint --failon warning --path . --files myfile.groovy -c .groovylintrc.json"
+      - "npm-groovy-lint --path . --files myfile.groovy"
+      - "npm-groovy-lint --path . --files myfile.groovy -c .groovylintrc.json"
+      - - "npm-groovy-lint --path . --files myfile.groovy -c .groovylintrc.json --fix"
     install:
       npm:
         - npm-groovy-lint
