--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -38,6 +38,7 @@ jobs:
           VALIDATE_ALL_CODEBASE: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }} # Validates all source when push on master, else just the git diff with master. Override with true if you always want to lint all sources
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           FILTER_REGEX_EXCLUDE: '(\.automation/test|docs/javascripts|lib/)'
+          MARKDOWN_MARKDOWN_LINK_CHECK_DISABLE_ERRORS: true
           DISABLE: CLOUDFORMATION
           DISABLE_LINTERS: BASH_SHFMT,DOCKERFILE_HADOLINT
 
