New reporter: Updated sources (#69)
* UpdatedSources reporter

* env:   ACTIONS_ALLOW_UNSECURE_COMMANDS: true

* create log file folder if not existing + linters_logs folder

* typo

* fix

* Typos

* [Mega-Linter] Apply linters fixes

* Typooo

* fix tests

* Link to online doc in README.md

* Avoid copy-paste detection + python formatting

* Update markdownlint doc link

* Fix test runs

* Add timeout for pytests

* Fix UpdatedSourcesReporter source file copy

* Ignore report folder + quickfix bug

* [Mega-Linter] Apply linters fixes

* Auto stash before merge of "UpdatedRepositoryReporter" and "origin/UpdatedRepositoryReporter"

* [Mega-Linter] Apply linters fixes

* Fix test

* Quick Fix

* [Mega-Linter] Apply linters fixes

* Disable Updated Sources report test (not adapted to test suite)

* cspell

* Remove /github/workspace from reports

* [Mega-Linter] Apply linters fixes

* Temporary disable SPELL for PR

Co-authored-by: nvuillam <nvuillam@users.noreply.github.com>

--- a/.github/workflows/auto-update-linters.yml
+++ b/.github/workflows/auto-update-linters.yml
@@ -9,6 +9,9 @@ on:
   schedule:
     - cron: "0 0 * * *"
 
+env:
+  ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+
 ###############
 # Set the Job #
 ###############
