--- a/.github/workflows/deploy-DEV.yml
+++ b/.github/workflows/deploy-DEV.yml
@@ -22,6 +22,9 @@ on:
   pull_request:
     branches-ignore: []
 
+env:
+  ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+
 ###############
 # Set the Job #
 ###############
@@ -85,7 +88,7 @@ jobs:
       #####################################
       - name: Run against all code base
         shell: bash
-        run: docker run -e DEFAULT_BRANCH=master -e OUTPUT_DETAILS=detailed -e FILTER_REGEX_EXCLUDE='(\.automation/test|docs/javascripts|lib/)' -e DISABLE="CLOUDFORMATION" -e DISABLE_LINTERS="BASH_SHFMT,DOCKERFILE_HADOLINT,PYTHON_BLACK,PYTHON_ISORT" -e GITHUB_REPOSITORY="${{github.repository}}" -e GITHUB_SHA="${{github.sha}}" -e GITHUB_TOKEN="${{github.token}}" -e GITHUB_RUN_ID="${{github.run_id}}" -e PAT="${{secrets.PAT}}" -v ${GITHUB_WORKSPACE}:/tmp/lint nvuillam/mega-linter:${GITHUB_SHA}
+        run: docker run -e DEFAULT_BRANCH=master -e OUTPUT_DETAILS=detailed -e FILTER_REGEX_EXCLUDE='(\.automation/test|docs/javascripts|lib/)' -e DISABLE="CLOUDFORMATION,SPELL" -e DISABLE_LINTERS="BASH_SHFMT,DOCKERFILE_HADOLINT,PYTHON_BLACK,PYTHON_ISORT" -e GITHUB_REPOSITORY="${{github.repository}}" -e GITHUB_SHA="${{github.sha}}" -e GITHUB_TOKEN="${{github.token}}" -e GITHUB_RUN_ID="${{github.run_id}}" -e PAT="${{secrets.PAT}}" -v ${GITHUB_WORKSPACE}:/tmp/lint nvuillam/mega-linter:${GITHUB_SHA}
         timeout-minutes: 10
 
       # Upload Mega-Linter artifacts
